--- a/ECG_CNN_4layers.ipynb
+++ b/ECG_CNN_4layers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,11 +80,9 @@
     "        self.conv4 = nn.Conv1d(128, 256, kernel_size=5, padding=2)\n",
     "        self.bn4 = nn.BatchNorm1d(256)\n",
     "        self.drop4 = nn.Dropout(dropout_prob) \n",
-    "        \n",
+    "\n",
     "        self.relu = nn.ReLU()\n",
-    "        self.gap = nn.AdaptiveAvgPool1d(1)\n",
-    "        self.dropout = nn.Dropout(dropout_prob)\n",
-    "        self.fc = nn.Linear(256, num_classes)\n",
+    "        self.fc = nn.Linear(256*187, num_classes)\n",
     "\n",
     "    def forward(self, x):\n",
     "        x = self.relu(self.bn1(self.conv1(x)))\n",
@@ -93,15 +91,14 @@
     "        x = self.drop3(x)\n",
     "        x = self.relu(self.bn4(self.conv4(x)))\n",
     "        x = self.drop4(x)\n",
-    "        x = self.gap(x).squeeze(-1)\n",
-    "        x = self.dropout(x)\n",
+    "        x = x.reshape(x.shape[0], -1)\n",
     "        x = self.fc(x)\n",
     "        return x\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,106 +110,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/100 - Train Loss: 0.2519 | Val Loss: 0.2310 | Val Acc: 0.9323\n",
+      "Epoch 1/100 - Train Loss: 0.2327 | Val Loss: 0.1235 | Val Acc: 0.9703\n",
       "Best model saved.\n",
-      "Epoch 2/100 - Train Loss: 0.1571 | Val Loss: 0.2486 | Val Acc: 0.9383\n",
-      "Epoch 3/100 - Train Loss: 0.1343 | Val Loss: 0.1219 | Val Acc: 0.9658\n",
+      "Epoch 2/100 - Train Loss: 0.1062 | Val Loss: 0.1054 | Val Acc: 0.9720\n",
       "Best model saved.\n",
-      "Epoch 4/100 - Train Loss: 0.1216 | Val Loss: 0.1192 | Val Acc: 0.9665\n",
+      "Epoch 3/100 - Train Loss: 0.0870 | Val Loss: 0.0827 | Val Acc: 0.9779\n",
       "Best model saved.\n",
-      "Epoch 5/100 - Train Loss: 0.1138 | Val Loss: 0.1629 | Val Acc: 0.9535\n",
-      "Epoch 6/100 - Train Loss: 0.1075 | Val Loss: 0.1069 | Val Acc: 0.9708\n",
+      "Epoch 4/100 - Train Loss: 0.0747 | Val Loss: 0.0930 | Val Acc: 0.9771\n",
+      "Epoch 5/100 - Train Loss: 0.0674 | Val Loss: 0.0770 | Val Acc: 0.9785\n",
       "Best model saved.\n",
-      "Epoch 7/100 - Train Loss: 0.1009 | Val Loss: 0.1044 | Val Acc: 0.9715\n",
+      "Epoch 6/100 - Train Loss: 0.0596 | Val Loss: 0.0852 | Val Acc: 0.9793\n",
+      "Epoch 7/100 - Train Loss: 0.0529 | Val Loss: 0.0711 | Val Acc: 0.9808\n",
       "Best model saved.\n",
-      "Epoch 8/100 - Train Loss: 0.0975 | Val Loss: 0.0925 | Val Acc: 0.9743\n",
+      "Epoch 8/100 - Train Loss: 0.0479 | Val Loss: 0.0717 | Val Acc: 0.9818\n",
+      "Epoch 9/100 - Train Loss: 0.0431 | Val Loss: 0.0689 | Val Acc: 0.9812\n",
       "Best model saved.\n",
-      "Epoch 9/100 - Train Loss: 0.0935 | Val Loss: 0.0957 | Val Acc: 0.9720\n",
-      "Epoch 10/100 - Train Loss: 0.0898 | Val Loss: 0.0961 | Val Acc: 0.9748\n",
-      "Epoch 11/100 - Train Loss: 0.0864 | Val Loss: 0.0869 | Val Acc: 0.9757\n",
+      "Epoch 10/100 - Train Loss: 0.0381 | Val Loss: 0.0676 | Val Acc: 0.9808\n",
       "Best model saved.\n",
-      "Epoch 12/100 - Train Loss: 0.0849 | Val Loss: 0.0975 | Val Acc: 0.9766\n",
-      "Epoch 13/100 - Train Loss: 0.0799 | Val Loss: 0.0880 | Val Acc: 0.9760\n",
-      "Epoch 14/100 - Train Loss: 0.0797 | Val Loss: 0.0817 | Val Acc: 0.9788\n",
+      "Epoch 11/100 - Train Loss: 0.0345 | Val Loss: 0.0713 | Val Acc: 0.9836\n",
+      "Epoch 12/100 - Train Loss: 0.0314 | Val Loss: 0.0668 | Val Acc: 0.9834\n",
       "Best model saved.\n",
-      "Epoch 15/100 - Train Loss: 0.0784 | Val Loss: 0.0790 | Val Acc: 0.9785\n",
-      "Best model saved.\n",
-      "Epoch 16/100 - Train Loss: 0.0754 | Val Loss: 0.0905 | Val Acc: 0.9740\n",
-      "Epoch 17/100 - Train Loss: 0.0746 | Val Loss: 0.0802 | Val Acc: 0.9784\n",
-      "Epoch 18/100 - Train Loss: 0.0714 | Val Loss: 0.0861 | Val Acc: 0.9760\n",
-      "Epoch 19/100 - Train Loss: 0.0695 | Val Loss: 0.0789 | Val Acc: 0.9782\n",
-      "Best model saved.\n",
-      "Epoch 20/100 - Train Loss: 0.0677 | Val Loss: 0.0767 | Val Acc: 0.9781\n",
-      "Best model saved.\n",
-      "Epoch 21/100 - Train Loss: 0.0667 | Val Loss: 0.0775 | Val Acc: 0.9789\n",
-      "Epoch 22/100 - Train Loss: 0.0652 | Val Loss: 0.0910 | Val Acc: 0.9772\n",
-      "Epoch 23/100 - Train Loss: 0.0651 | Val Loss: 0.0811 | Val Acc: 0.9777\n",
-      "Epoch 24/100 - Train Loss: 0.0623 | Val Loss: 0.0742 | Val Acc: 0.9800\n",
-      "Best model saved.\n",
-      "Epoch 25/100 - Train Loss: 0.0615 | Val Loss: 0.0706 | Val Acc: 0.9812\n",
-      "Best model saved.\n",
-      "Epoch 26/100 - Train Loss: 0.0601 | Val Loss: 0.0732 | Val Acc: 0.9790\n",
-      "Epoch 27/100 - Train Loss: 0.0589 | Val Loss: 0.0754 | Val Acc: 0.9799\n",
-      "Epoch 28/100 - Train Loss: 0.0586 | Val Loss: 0.0769 | Val Acc: 0.9800\n",
-      "Epoch 29/100 - Train Loss: 0.0552 | Val Loss: 0.0727 | Val Acc: 0.9812\n",
-      "Epoch 30/100 - Train Loss: 0.0556 | Val Loss: 0.0802 | Val Acc: 0.9796\n",
-      "Epoch 31/100 - Train Loss: 0.0546 | Val Loss: 0.0708 | Val Acc: 0.9805\n",
-      "Epoch 32/100 - Train Loss: 0.0543 | Val Loss: 0.0728 | Val Acc: 0.9805\n",
-      "Epoch 33/100 - Train Loss: 0.0531 | Val Loss: 0.0673 | Val Acc: 0.9825\n",
-      "Best model saved.\n",
-      "Epoch 34/100 - Train Loss: 0.0523 | Val Loss: 0.0671 | Val Acc: 0.9818\n",
-      "Best model saved.\n",
-      "Epoch 35/100 - Train Loss: 0.0513 | Val Loss: 0.0671 | Val Acc: 0.9826\n",
-      "Best model saved.\n",
-      "Epoch 36/100 - Train Loss: 0.0499 | Val Loss: 0.0655 | Val Acc: 0.9829\n",
-      "Best model saved.\n",
-      "Epoch 37/100 - Train Loss: 0.0491 | Val Loss: 0.0685 | Val Acc: 0.9823\n",
-      "Epoch 38/100 - Train Loss: 0.0472 | Val Loss: 0.0745 | Val Acc: 0.9820\n",
-      "Epoch 39/100 - Train Loss: 0.0475 | Val Loss: 0.0699 | Val Acc: 0.9813\n",
-      "Epoch 40/100 - Train Loss: 0.0477 | Val Loss: 0.0669 | Val Acc: 0.9824\n",
-      "Epoch 41/100 - Train Loss: 0.0466 | Val Loss: 0.0702 | Val Acc: 0.9801\n",
-      "Epoch 42/100 - Train Loss: 0.0455 | Val Loss: 0.0662 | Val Acc: 0.9829\n",
-      "Epoch 43/100 - Train Loss: 0.0441 | Val Loss: 0.0646 | Val Acc: 0.9830\n",
-      "Best model saved.\n",
-      "Epoch 44/100 - Train Loss: 0.0444 | Val Loss: 0.0638 | Val Acc: 0.9834\n",
-      "Best model saved.\n",
-      "Epoch 45/100 - Train Loss: 0.0429 | Val Loss: 0.0626 | Val Acc: 0.9835\n",
-      "Best model saved.\n",
-      "Epoch 46/100 - Train Loss: 0.0424 | Val Loss: 0.0655 | Val Acc: 0.9837\n",
-      "Epoch 47/100 - Train Loss: 0.0420 | Val Loss: 0.0760 | Val Acc: 0.9808\n",
-      "Epoch 48/100 - Train Loss: 0.0426 | Val Loss: 0.0656 | Val Acc: 0.9821\n",
-      "Epoch 49/100 - Train Loss: 0.0398 | Val Loss: 0.0647 | Val Acc: 0.9829\n",
-      "Epoch 50/100 - Train Loss: 0.0415 | Val Loss: 0.0648 | Val Acc: 0.9835\n",
-      "Epoch 51/100 - Train Loss: 0.0405 | Val Loss: 0.0694 | Val Acc: 0.9840\n",
-      "Epoch 52/100 - Train Loss: 0.0392 | Val Loss: 0.0655 | Val Acc: 0.9837\n",
-      "Epoch 53/100 - Train Loss: 0.0381 | Val Loss: 0.0758 | Val Acc: 0.9797\n",
-      "Epoch 54/100 - Train Loss: 0.0386 | Val Loss: 0.0628 | Val Acc: 0.9854\n",
-      "Epoch 55/100 - Train Loss: 0.0369 | Val Loss: 0.0690 | Val Acc: 0.9844\n",
-      "Epoch 56/100 - Train Loss: 0.0384 | Val Loss: 0.0625 | Val Acc: 0.9834\n",
-      "Best model saved.\n",
-      "Epoch 57/100 - Train Loss: 0.0369 | Val Loss: 0.0672 | Val Acc: 0.9848\n",
-      "Epoch 58/100 - Train Loss: 0.0370 | Val Loss: 0.0684 | Val Acc: 0.9841\n",
-      "Epoch 59/100 - Train Loss: 0.0359 | Val Loss: 0.0663 | Val Acc: 0.9845\n",
-      "Epoch 60/100 - Train Loss: 0.0339 | Val Loss: 0.0667 | Val Acc: 0.9844\n",
-      "Epoch 61/100 - Train Loss: 0.0351 | Val Loss: 0.0652 | Val Acc: 0.9842\n",
-      "Epoch 62/100 - Train Loss: 0.0350 | Val Loss: 0.0685 | Val Acc: 0.9825\n",
-      "Epoch 63/100 - Train Loss: 0.0340 | Val Loss: 0.0651 | Val Acc: 0.9841\n",
-      "Epoch 64/100 - Train Loss: 0.0332 | Val Loss: 0.0666 | Val Acc: 0.9842\n",
-      "Epoch 65/100 - Train Loss: 0.0335 | Val Loss: 0.0649 | Val Acc: 0.9833\n",
-      "Epoch 66/100 - Train Loss: 0.0324 | Val Loss: 0.0690 | Val Acc: 0.9834\n",
-      "Epoch 67/100 - Train Loss: 0.0324 | Val Loss: 0.0659 | Val Acc: 0.9840\n",
-      "Epoch 68/100 - Train Loss: 0.0318 | Val Loss: 0.0690 | Val Acc: 0.9844\n",
-      "Epoch 69/100 - Train Loss: 0.0321 | Val Loss: 0.0706 | Val Acc: 0.9834\n",
-      "Epoch 70/100 - Train Loss: 0.0318 | Val Loss: 0.0662 | Val Acc: 0.9838\n",
-      "Epoch 71/100 - Train Loss: 0.0303 | Val Loss: 0.0679 | Val Acc: 0.9834\n",
-      "Early stopping at epoch 71\n"
+      "Epoch 13/100 - Train Loss: 0.0293 | Val Loss: 0.0710 | Val Acc: 0.9818\n",
+      "Epoch 14/100 - Train Loss: 0.0270 | Val Loss: 0.0690 | Val Acc: 0.9820\n",
+      "Epoch 15/100 - Train Loss: 0.0241 | Val Loss: 0.0772 | Val Acc: 0.9820\n",
+      "Epoch 16/100 - Train Loss: 0.0236 | Val Loss: 0.0781 | Val Acc: 0.9832\n",
+      "Epoch 17/100 - Train Loss: 0.0217 | Val Loss: 0.0724 | Val Acc: 0.9820\n",
+      "Epoch 18/100 - Train Loss: 0.0202 | Val Loss: 0.0729 | Val Acc: 0.9818\n",
+      "Epoch 19/100 - Train Loss: 0.0184 | Val Loss: 0.0903 | Val Acc: 0.9818\n",
+      "Epoch 20/100 - Train Loss: 0.0171 | Val Loss: 0.0850 | Val Acc: 0.9835\n",
+      "Epoch 21/100 - Train Loss: 0.0159 | Val Loss: 0.0812 | Val Acc: 0.9833\n",
+      "Epoch 22/100 - Train Loss: 0.0152 | Val Loss: 0.0881 | Val Acc: 0.9781\n",
+      "Epoch 23/100 - Train Loss: 0.0144 | Val Loss: 0.0942 | Val Acc: 0.9803\n",
+      "Epoch 24/100 - Train Loss: 0.0125 | Val Loss: 0.0883 | Val Acc: 0.9830\n",
+      "Epoch 25/100 - Train Loss: 0.0141 | Val Loss: 0.0948 | Val Acc: 0.9821\n",
+      "Epoch 26/100 - Train Loss: 0.0136 | Val Loss: 0.0828 | Val Acc: 0.9818\n",
+      "Epoch 27/100 - Train Loss: 0.0131 | Val Loss: 0.0978 | Val Acc: 0.9824\n",
+      "Early stopping at epoch 27\n"
      ]
     }
    ],
@@ -312,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -359,29 +299,29 @@
      "output_type": "stream",
      "text": [
       "===== Confusion Matrix =====\n",
-      "[[18030    44    41     2     1]\n",
-      " [  141   401     9     5     0]\n",
-      " [   37     3  1395    12     1]\n",
-      " [   14     0    14   133     1]\n",
-      " [   18     2     5     0  1583]]\n",
+      "[[18014    43    39    10    12]\n",
+      " [  137   404    14     0     1]\n",
+      " [   56     3  1364    21     4]\n",
+      " [   21     0    13   128     0]\n",
+      " [   18     0     5     0  1585]]\n",
       "\n",
       "===== Per-Class Metrics =====\n",
-      "recall: [0.9951 0.7212 0.9634 0.821  0.9845]\n",
-      "specificity: [0.9444 0.9977 0.9966 0.9991 0.9999]\n",
-      "precision: [0.9885 0.8911 0.9529 0.875  0.9981]\n",
-      "f1: [0.9918 0.7972 0.9581 0.8471 0.9912]\n",
+      "recall: [0.9943 0.7266 0.942  0.7901 0.9857]\n",
+      "specificity: [0.9385 0.9978 0.9965 0.9986 0.9992]\n",
+      "precision: [0.9873 0.8978 0.9505 0.805  0.9894]\n",
+      "f1: [0.9908 0.8032 0.9462 0.7975 0.9875]\n",
       "\n",
       "===== Macro-Average Metrics =====\n",
-      "recall: 0.8970\n",
-      "specificity: 0.9875\n",
-      "precision: 0.9411\n",
-      "f1: 0.9171\n",
+      "recall: 0.8877\n",
+      "specificity: 0.9861\n",
+      "precision: 0.9260\n",
+      "f1: 0.9050\n",
       "\n",
       "===== Weighted-Average Metrics =====\n",
-      "recall: 0.9840\n",
-      "specificity: 0.9536\n",
-      "precision: 0.9835\n",
-      "f1: 0.9835\n"
+      "recall: 0.9819\n",
+      "specificity: 0.9488\n",
+      "precision: 0.9814\n",
+      "f1: 0.9814\n"
      ]
     }
    ],
