--- a/ECG_couple_CNN.ipynb
+++ b/ECG_couple_CNN.ipynb
@@ -217,7 +217,7 @@
     "        x = self.pool2(x)      # [batch, 128, 46]\n",
     "        \n",
     "        # Flatten\n",
-    "        x = x.view(x.size(0), -1)  # [batch, 5888]\n",
+    "        x = x.reshape(x.shape[0], -1)  # [batch, 5888]\n",
     "        \n",
     "        # FC layers\n",
     "        x = self.relu(self.bn_fc1(self.fc1(x)))\n",
